reorganized html code

--- a/index.html
+++ b/index.html
@@ -35,26 +35,16 @@
         </nav>
         <div>
             <br><br><br><br><br>
-        <div class="flex items-center justify-between w-full">
-  <div>
-    <h1 class="banner-header">
-      ALWAYS <span class="text-orange-600">FRESH <br>FLOWERS</span>
-    </h1>
-    <p class="banner-paragraph opacity text-gray-600 text-sm">
-      Indulge your senses with the beauty and fragrance of <br>
-      our fresh flower shop. From classic roses to exotic <br>
-      blooms, we offer a wide variety of fresh flowers that <br>
-      are perfect for any occasion.
-    </p>
-  </div>
-  <img src="images/hero-flower.png" alt="hero flower" />
-</div>
-
-
-        
-    </div>
+            <div class="flex items-center justify-between w-full">
+                <div>
+                    <h1 class="banner-header">ALWAYS <span class="text-orange-600">FRESH <br>FLOWERS</span></h1>
+                    <p class="banner-paragraph opacity text-gray-600 text-sm">Indulge your senses with the beauty and fragrance of <br> our fresh flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.</p>
+                </div>
+                    <img src="images/hero-flower.png" alt="hero flower" />
+            </div>
+        </div>
     </header>
-    <br><br><br>
+                     <br><br><br>
     <main class="w-fit">
         
         <!-- Our Planets -->
@@ -131,8 +121,6 @@
                 <img src="images/flower-store.png" alt="Flower store" class="w-full rounded-lg">
                 <img src="images/trusted-badge.png" alt="Badge" class="absolute -top-28 -right-28 h-56 w-56">
             </div>
-
-
 
         <!-- Right content -->
             <div class="w-1/2 ml-12">
